 [tool.poetry]
name = "lambda-toolio"
version = "0.1.0"
description = "lambda labs cloud api tool"
authors = ["Cdreetz <cdreetz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
lambda-toolio = "lambda_toolio.client:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"